--- a/10-syslog.conf
+++ b/10-syslog.conf
@@ -19,7 +19,7 @@ filter {
     }
 
   geoip {
-    source => "clientip"
+    source => "xff_ip"
     database => "/etc/logstash/GeoLite2-City.mmdb"
   }
 }
