--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,12 +5,13 @@ http {
         js_import  handler.js;
         js_set $deviceA handler.deviceA;
         js_set $deviceB handler.deviceB;
+	js_set $xff_ip handler.xff_ip;
 
 	##
 	# Logging Settings
 	##
         map $msec $msec_no_decimal { ~(.*)\.(.*) $1$2; }
-        log_format deviceidlogformat '<190>#$msec_no_decimal#$remote_user#ebookserver#$remote_addr#12345#$http_x_forwarded_for#$upstream_addr#$host#$request_method#$uri#$status#nocontentype#0#$deviceA#$deviceB#$http_user_agent#0#';
+        log_format deviceidlogformat '<190>#$msec_no_decimal#$remote_user#ebookserver#$remote_addr#12345#$xff_ip#$upstream_addr#$host#$request_method#$uri#$status#nocontentype#0#$deviceA#$deviceB#$http_user_agent#0#';
 
   server {
     server_name     ebook.bienlab.com;
