--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,7 +19,7 @@ http {
 
     location / {
       sub_filter </head>
-      '</head><script async defer src="https://dip.zeronaught.com/__imp_apg__/js/f5cs-a_aabz35oIkM-6b92a1c3.js" id="_imp_apg_dip_" _imp_apg_cid_="f5cs-a_aabz35oIkM-6b92a1c3" _imp_apg_api_domain_="https://dip.zeronaught.com"></script>';
+      '<script async defer src="https://dip.zeronaught.com/__imp_apg__/js/f5cs-a_aabz35oIkM-6b92a1c3.js" id="_imp_apg_dip_" _imp_apg_cid_="f5cs-a_aabz35oIkM-6b92a1c3" _imp_apg_api_domain_="https://dip.zeronaught.com"></script></head>';
       sub_filter_once on;
       proxy_set_header Accept-Encoding "";
       proxy_pass  http://localhost:8083;
