adding php stuff

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,30 +1,42 @@
+user  nginx;
+worker_processes  auto;
+
+error_log  /var/log/nginx/error.log notice;
+pid        /var/run/nginx.pid;
+
 load_module modules/ngx_http_js_module.so;
 
+events {
+    worker_connections  1024;
+}
+
+
 http {
-        # NJS
-        js_import  handler.js;
-        js_set $deviceA handler.deviceA;
-        js_set $deviceB handler.deviceB;
-	js_set $xff_ip handler.xff_ip;
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-	##
-	# Logging Settings
-	##
-        map $msec $msec_no_decimal { ~(.*)\.(.*) $1$2; }
-        log_format deviceidlogformat '<190>#$msec_no_decimal#$remote_user#ebookserver#$remote_addr#12345#$xff_ip#$upstream_addr#$host#$request_method#$uri#$status#nocontentype#0#$deviceA#$deviceB#$http_user_agent#0#';
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-  server {
-    server_name     ebook.bienlab.com;
-    access_log syslog:server=localhost:5140,facility=local7,tag=nginx,severity=info deviceidlogformat;
+    access_log  /var/log/nginx/access.log  main;
 
-    location / {
-      sub_filter </head>
-      '<script async defer src="https://dip.zeronaught.com/__imp_apg__/js/f5cs-a_aabz35oIkM-6b92a1c3.js" id="_imp_apg_dip_" _imp_apg_cid_="f5cs-a_aabz35oIkM-6b92a1c3" _imp_apg_api_domain_="https://dip.zeronaught.com"></script></head>';
-      sub_filter_once on;
-      proxy_set_header Accept-Encoding "";
-      proxy_pass  http://localhost:8083;
-    }
+    # NJS
+    js_import  /etc/nginx/conf.d/handler.js;
+    js_set $deviceA handler.deviceA;
+    js_set $deviceB handler.deviceB;
+    js_set $xff_ip handler.xff_ip;
 
-  }
+    map $msec $msec_no_decimal { ~(.*)\.(.*) $1$2; }
+    include /etc/nginx/conf.d/logformat/*.conf;
+
+    sendfile        on;
+
+    keepalive_timeout  65;
+
+    #gzip  on;
+
+    include /etc/nginx/conf.d/*.conf;
+    include /etc/nginx/conf.d/sites/*.conf;
 }
 
