--- a/10-syslog.conf
+++ b/10-syslog.conf
@@ -11,7 +11,7 @@ input {
 
 filter {
   grok {
-        match => { "message" => "<190>#%{NUMBER:timestamp}#%{DATA:uName}#%{DATA:virtual_name}#%{IP:clientip}#%{POSINT:client_port}#%{DATA:xff_ip}#%{DATA:lb_server}#%{DATA:http_host}#%{DATA:http_method}#%{DATA:http_request_uri}#%{NUMBER:status_code}#%{DATA:content_type}#%{NUMBER:content_length}#%{DATA:deviceA}#%{DATA:deviceB}#%{DATA:http_user_agent}#%{NUMBER:authcode}#"}
+        match => { "message" => "<190>#%{NUMBER:timestamp}#%{DATA:uName}#%{DATA:virtual_name}#%{IP:clientip}#%{POSINT:client_port}#%{DATA:xff_ip}#%{DATA:lb_server}#%{DATA:http_host}#%{DATA:http_method}#%{DATA:http_request_uri}#%{NUMBER:status_code}#%{DATA:content_type}#%{NUMBER:content_length}#%{DATA:deviceA}#%{DATA:deviceB}#%{DATA:http_user_agent}#%{NUMBER:authcode}#%{DATA:sessionid}#"}
   }
     date {
         match => [ "timestamp" , "UNIX_MS"]
